kubernetes/local/rest_api_flint.example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flint-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flint-api
            port:
              number: 8080
